@@ -22,18 +22,17 @@ import java.io.IOException;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
 
 import org.apache.jena.atlas.io.IO;
 import org.apache.jena.dboe.base.file.Location;
+import org.apache.jena.dboe.sys.IO_DB;
 import org.apache.jena.dboe.sys.Names;
 import org.apache.jena.tdb2.TDBException;
 import org.apache.jena.tdb2.params.StoreParams;
 import org.apache.jena.tdb2.params.StoreParamsCodec;
 import org.apache.jena.tdb2.sys.DatabaseOps;
-import org.apache.jena.tdb2.sys.IOX;
 import org.apache.jena.tdb2.sys.Util;
 
 class SpotTDB2 {
@@ -82,7 +81,7 @@ class SpotTDB2 {
             // Or TDB1?
             return ! SpotTDB1.isTDB1(location.getDirectoryPath());
         // Validate storage.
-        Location storageLocation = IOX.asLocation(db);
+        Location storageLocation = IO_DB.asLocation(db);
         return isTDB2_Storage(storageLocation);
     }
 
@@ -117,7 +116,7 @@ class SpotTDB2 {
     /** Return the current active database area within a database directory. */
     private static Path storageDir(Location location) {
         // Database directory
-        Path path = IOX.asPath(location);
+        Path path = IO_DB.asPath(location);
         // Storage directory in database directory.
         Path db = findLocation(path, DatabaseOps.dbPrefix);
         return db;
@@ -127,7 +126,7 @@ class SpotTDB2 {
         if ( ! Files.exists(directory) )
             return null;
         // In-order, low to high.
-        List<Path> maybe = IOX.scanForDirByPattern(directory, namebase, DatabaseOps.SEP);
+        List<Path> maybe = IO_DB.scanForDirByPattern(directory, namebase, DatabaseOps.SEP);
         return Util.getLastOrNull(maybe);
     }
 
@@ -230,7 +229,7 @@ class SpotTDB2 {
     }
 
     private static boolean isEmpty(Location location) {
-        Path path = Paths.get(location.getDirectoryPath());
+        Path path = Path.of(location.getDirectoryPath());
         try(DirectoryStream<Path> entries = Files.newDirectoryStream(path)) {
             return ! entries.iterator().hasNext();
         } catch(IOException ex) {
